--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
       - run:
           name: Configure server
           command: |
-            ansible-playbook -i inventory configure_instance.yml
+            ansible-playbook -i inventory configure_instance.yml --private-key Udacity_Autoscaling.pem
             
 
 # Invoke jobs via workflows
