--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["58:cc:d8:44:21:9c:f5:d0:e0:50:aa:1d:bb:5d:1b:d0"] # You can get this ID in the section where you registered the SSH Key
+          fingerprints: ["90:5d:bd:fd:c1:11:ea:89:11:07:aa:e3:4f:43:88:ba"] # You can get this ID in the section where you registered the SSH Key
       - run:
           name: Install dependencies
           command: |
@@ -46,7 +46,7 @@ jobs:
       - run:
           name: Configure server
           command: |
-            ansible-playbook -i inventory configure_instance.yml --private-key Udacity_Autoscaling.pem
+            ansible-playbook -i inventory configure_instance.yml
             
 
 # Invoke jobs via workflows
