--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
 
   configure_infrastructure: 
     docker:
-      - image: python:3.6.10-alpine3.11
+      - image: python:3.7-alpine3.11
     steps:
       - checkout
       - add_ssh_keys:
@@ -46,7 +46,7 @@ jobs:
       - run:
           name: Configure server
           command: |
-            ansible-playbook -i inventory configure_instance.yml
+            ansible-playbook -i inventory.txt configure_instance.yml
             
 
 # Invoke jobs via workflows
