--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,13 @@ jobs:
       - image: python:3.7-alpine3.11
     steps:
       - checkout
+      - run:
+         name: Install tar, gzip and awscli
+         command: |
+           apk add tar gzip
+           apk update pip3
+           pip3 install \
+           awscli \
       - add_ssh_keys:
           fingerprints: ["89:fd:55:65:3f:fd:a6:40:20:9b:dd:f8:ba:18:92:28"] # You can get this ID in the section where you registered the SSH Key
       - run:
