--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,16 @@ jobs:
           name: "Say hello"
           command: "echo Hello, World!"
 
+commands:
+  destroy_environment:
+    steps:
+      - run: 
+          name: destroy environment
+          when: on_fail
+          command: |
+            aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5}     
+
+      
   create_infrastructure: 
     docker:
       - image: amazon/aws-cli
@@ -68,10 +78,14 @@ jobs:
             # Test if website exists
             if curl -s --head ${URL} 
             then
-              return 0
+              echo "working"
             else
-              return 1
+              echo "not working"
             fi
+      - run:
+          name: intend to fail      
+          command: return 1
+      - destroy_environment
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -82,3 +96,4 @@ workflows:
 #      - create_infrastructure
 #      - configure_infrastructure
       - smoke_test 
+      - destroy_environment
