--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,7 +93,7 @@ workflows:
   say-hello-workflow:
     jobs:
       - say-hello
-#      - create_infrastructure
+      - create_infrastructure
 #      - configure_infrastructure
       - smoke_test 
       - destroy_environment
