--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,4 +96,6 @@ workflows:
       - say-hello
       - create_infrastructure
 #      - configure_infrastructure
-      - smoke_test
+      - smoke_test:
+          requires:
+            - create_infrastructure
