--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ commands:
           name: destroy environment
           when: on_fail
           command: |
-            aws cloudformation delete-stack --stack-name myStack-cc63a
+            aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5}
 
 jobs:
   say-hello:
@@ -43,6 +43,7 @@ jobs:
               --template-file template.yml \
               --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
               --region us-east-1  
+      - destroy_environment        
 
   configure_infrastructure: 
     docker:
@@ -99,7 +100,6 @@ workflows:
       - say-hello
 #      - create_infrastructure
 #      - configure_infrastructure
-#      - smoke_test:
-#          requires:
-#            - create_infrastructure
-      - smoke_test
+      - smoke_test:
+          requires:
+            - create_infrastructure
