--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,8 +93,12 @@ jobs:
             --template-file bucket.yml \
             --stack-name stack-create-bucket-${CIRCLE_WORKFLOW_ID:0:7} \
             --parameter-overrides MyBucketName="mybucket-${CIRCLE_WORKFLOW_ID:0:7}"
-      - run: aws s3 cp *.html s3://mybucket-${CIRCLE_WORKFLOW_ID:0:7}
-          
+      - run:
+          name: to copy html to s3 bucket
+          command: | 
+            aws s3 cp index.html s3://mybucket-${CIRCLE_WORKFLOW_ID:0:7}
+            aws s3 cp error.html s3://mybucket-${CIRCLE_WORKFLOW_ID:0:7}
+
   get_last_deployment_id:
     docker:
       - image: amazon/aws-cli
